--- a/src/main/resources/view/CheckContactWindow.fxml
+++ b/src/main/resources/view/CheckContactWindow.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
+<!--   @@author{weigenie}-->
 
 <?import seedu.address.ui.ClaimItem?>
 <?import javafx.collections.FXCollections?>
