--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -128,6 +128,7 @@
 .cell_big_label_white_font {
     .cell_big_label;
     -fx-text-fill: #F5F5F5;
+    -fx-background-color: linear-gradient(to right, #d35400, transparent);
 }
 
 .cell_small_label {
@@ -152,7 +153,7 @@
 }
 
 .status-bar .label {
-    -fx-background-color: linear-gradient(to top right, green, black);
+    -fx-background-color: linear-gradient(to top right, green, transparent);
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
     -fx-padding: 4px;
@@ -259,8 +260,12 @@
     -fx-border-width: 0;
 }
 
-#roomCard {
+#patientPane {
     -fx-background-color: #2ca;
+}
+
+#invisiblePane {
+    -fx-background-color: -fx-base;
 }
 
 #commandTextField {
@@ -278,11 +283,11 @@
 }
 
 #queueListView .list-cell:filled:odd {
-    -fx-background-color: #a56a00;
+    -fx-background-color: #16a085;
 }
 
 #queueListView .list-cell:filled:even {
-    -fx-background-color: #6a7300;
+    -fx-background-color: #27ae60;
 }
 
 #resultDisplay .content {
