--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -417,6 +417,8 @@
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
+    -fx-border-color: derive(#dadada, 10%);
+    -fx-border-width: 0.5;
     -fx-font-size: 11;
 }
 
