--- a/src/main/resources/view/finance/Finance.css
+++ b/src/main/resources/view/finance/Finance.css
@@ -26,8 +26,8 @@
 }
 
 .transaction_method_label {
-    -fx-text-fill: white;
-    -fx-border-color: white;
+    -fx-text-fill: black !important;
+    -fx-border-color: black;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
@@ -58,7 +58,7 @@
 }
 
 #cats .label {
-    -fx-text-fill: white;
+    -fx-text-fill: white !important;
     -fx-background-color: #666699;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
@@ -75,8 +75,8 @@
 }
 
 .budget-inactive-label {
-    -fx-text-fill: #ff9999 !important;
-    -fx-border-color: #ff9999;
+    -fx-text-fill: black !important;
+    -fx-border-color: black;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
@@ -84,8 +84,8 @@
 }
 
 .budget-ended-label {
-    -fx-text-fill: rgba(170,164,152,0.74) !important;
-    -fx-border-color: rgba(170,164,152,0.74);
+    -fx-text-fill: rgba(125,119,107,0.74) !important;
+    -fx-border-color: rgba(125,119,107,0.74);
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
@@ -102,7 +102,7 @@
 }
 
 .budget-exceeded-label {
-    -fx-text-fill: white;
+    -fx-text-fill: white !important;
     -fx-background-color: rgba(186, 37, 20, 0.74);
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
@@ -122,17 +122,17 @@
 .budget-ended-big-label {
     -fx-font-family: "Segoe UI Semibold";
     -fx-font-size: 18px;
-    -fx-text-fill: rgba(190,184,171,0.74) !important;
+    -fx-text-fill: rgba(125,119,107,0.74) !important;
 }
 
 .budget-ended-small-label {
     -fx-font-family: "Segoe UI";
     -fx-font-size: 13px;
-    -fx-text-fill: rgba(190,184,171,0.74) !important;
+    -fx-text-fill: rgba(125,119,107,0.74) !important;
 }
 
 .budget-cat-label {
-    -fx-text-fill: white;
+    -fx-text-fill: white !important;
     -fx-background-color: #666699;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
@@ -141,8 +141,8 @@
 }
 
 .budget-ended-cat-label {
-    -fx-text-fill: white;
-    -fx-background-color: rgba(190,184,171,0.74);
+    -fx-text-fill: white !important;
+    -fx-background-color: rgba(125,119,107,0.74);
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
@@ -150,10 +150,75 @@
 }
 
 .budget-ended-met-label {
-    -fx-text-fill: rgba(190,184,171,0.74) !important;
-    -fx-border-color: rgba(190,184,171,0.74);
+    -fx-text-fill: rgba(125,119,107,0.74) !important;
+    -fx-border-color: rgba(125,119,107,0.74);
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+}
+
+.list-cell, #spendCardPane, #incomeCardPane, #borrowCardPane, #lendCardPane, #budgetCardPane {
+    -fx-background-color: white;
+    -fx-border-width: 0;
+}
+
+.list-cell {
+    -fx-label-padding: 0 0 0 0;
+    -fx-graphic-text-gap : 0;
+    -fx-padding: 0 0 0 0;
+}
+
+#spendCardPane, #incomeCardPane, #borrowCardPane, #lendCardPane, #budgetCardPane {
+    -fx-background-color: derive(#e1e1e1, 20%);
+    -fx-border-width: 0;
+}
+
+.list-cell:filled:odd #spendCardPane {
+    -fx-background-color: derive(#b2b2b2, 20%);
+}
+
+.list-cell:filled:odd #incomeCardPane {
+    -fx-background-color: derive(#b2b2b2, 20%);
+}
+
+.list-cell:filled:odd #borrowCardPane {
+    -fx-background-color: derive(#b2b2b2, 20%);
+}
+
+.list-cell:filled:odd #lendCardPane {
+    -fx-background-color: derive(#b2b2b2, 20%);
+}
+
+.list-cell:filled:odd #budgetCardPane {
+    -fx-background-color: derive(#b2b2b2, 20%);
+}
+
+.list-cell:filled:selected #spendCardPane {
+    -fx-background-color: derive(white, 20%);
+    -fx-border-color: derive(black, 20%);
+    -fx-border-width: 1;
+}
+
+.list-cell:filled:selected #incomeCardPane {
+    -fx-background-color: derive(white, 20%);
+    -fx-border-color: derive(black, 20%);
+    -fx-border-width: 1;
+}
+
+.list-cell:filled:selected #borrowCardPane {
+    -fx-background-color: derive(white, 20%);
+    -fx-border-color: derive(black, 20%);
+    -fx-border-width: 1;
+}
+
+.list-cell:filled:selected #lendCardPane {
+    -fx-background-color: derive(white, 20%);
+    -fx-border-color: derive(black, 20%);
+    -fx-border-width: 1;
+}
+
+.list-cell:filled:selected #budgetCardPane {
+    -fx-border-color: derive(black, 20%);
+    -fx-border-width: 1;
 }
