--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -10,9 +10,11 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <?import javafx.stage.Stage?>
-<fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-         title="MYMorise" minWidth="320" minHeight="600" onCloseRequest="#handleExit">
+<fx:root minHeight="600" minWidth="320" onCloseRequest="#handleExit" title="MYMorise" type="javafx.stage.Stage"
+         xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
         <Image url="@/images/expense_list_32.png"/>
     </icons>
@@ -34,10 +36,10 @@
                     </Menu>
                 </MenuBar>
 
-                <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER"
-                           maxHeight="50" minHeight="50" prefHeight="50">
+                <StackPane fx:id="commandBoxPlaceholder" maxHeight="50" minHeight="50" prefHeight="50"
+                           styleClass="pane-with-border" VBox.vgrow="NEVER">
                     <padding>
-                        <Insets top="5" right="10" bottom="5" left="10"/>
+                        <Insets bottom="5" left="10" right="10" top="5"/>
                     </padding>
                 </StackPane>
 
@@ -49,24 +51,45 @@
                 </StackPane>
 
                 <HBox VBox.vgrow="ALWAYS">
-                    <VBox fx:id="expenseList" styleClass="pane-with-border" minWidth="320" maxWidth="450" prefWidth="320"
-                          VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
+                    <VBox fx:id="expenseList" maxWidth="450" minWidth="320" prefWidth="320"
+                          styleClass="pane-with-border" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                         <padding>
                             <Insets bottom="10" left="10" right="10" top="10"/>
                         </padding>
-                        <StackPane fx:id="leftListPanelPlaceHolder" VBox.vgrow="ALWAYS"/>
+                        <Text fx:id="expenseListTitle" fill="WHITE" text="All Expenses" textAlignment="CENTER"
+                              wrappingWidth="305">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Text>
+                        <StackPane fx:id="leftListPanelPlaceHolder" VBox.vgrow="ALWAYS">
+                            <padding>
+                                <Insets bottom="10" left="10" right="10" top="10"/>
+                            </padding>
+                        </StackPane>
+
                     </VBox>
 
-                    <VBox fx:id="expenseList2" styleClass="pane-with-border" minWidth="320" maxWidth="450" prefWidth="320"
-                          VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
+                    <VBox fx:id="expenseList2" maxWidth="450" minWidth="320" prefWidth="320"
+                          styleClass="pane-with-border" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                         <padding>
                             <Insets bottom="10" left="10" right="10" top="10"/>
                         </padding>
-                        <StackPane fx:id="rightListPanelPlaceHolder" VBox.vgrow="ALWAYS"/>
+                        <Text fx:id="resultListTitle" fill="WHITE" text="placeholder" textAlignment="CENTER"
+                              wrappingWidth="305">
+                            <font>
+                                <Font size="18.0"/>
+                            </font>
+                        </Text>
+                        <StackPane fx:id="rightListPanelPlaceHolder" VBox.vgrow="ALWAYS">
+                            <padding>
+                                <Insets bottom="10" left="10" right="10" top="10"/>
+                            </padding>
+                        </StackPane>
                     </VBox>
 
-                    <VBox fx:id="stats" styleClass="pane-with-border" minHeight="150" minWidth="480" prefWidth="480"
-                          VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
+                    <VBox fx:id="stats" minHeight="150" minWidth="480" prefWidth="480" styleClass="pane-with-border"
+                          HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                         <padding>
                             <Insets bottom="10" left="10" right="10" top="15"/>
                         </padding>
