--- a/src/main/resources/view/ReminderListCard.fxml
+++ b/src/main/resources/view/ReminderListCard.fxml
@@ -9,6 +9,8 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.text.Font?>
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
@@ -31,4 +33,15 @@
             <!-- <Label fx:id="times" styleClass="cell_small_label" text="\$times" /> -->
         </VBox>
     </GridPane>
+    <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+        <children>
+            <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleDelete" style="-fx-border-color: none; -fx-background-color: #489d64;" text="x" textAlignment="CENTER" textFill="#979797">
+                <font>
+                    <Font size="10.0" />
+                </font></Button>
+        </children>
+        <padding>
+            <Insets bottom="5" left="0" right="5" top="5" />
+        </padding>
+    </HBox>
 </HBox>
