--- a/src/main/resources/view/finance/FinanceWindow.fxml
+++ b/src/main/resources/view/finance/FinanceWindow.fxml
@@ -18,7 +18,7 @@
   <scene>
     <Scene>
       <stylesheets>
-        <URL value="@../DarkTheme.css" />
+        <URL value="@../LightTheme.css" />
         <URL value="@../Extensions.css" />
         <URL value="@Finance.css" />
       </stylesheets>
