--- a/src/main/resources/view/quiz/QuizMainWindow.fxml
+++ b/src/main/resources/view/quiz/QuizMainWindow.fxml
@@ -21,7 +21,7 @@
   <scene>
     <Scene>
       <stylesheets>
-        <URL value="@../DarkTheme.css" />
+        <URL value="@../LightTheme.css" />
         <URL value="@../Extensions.css" />
           <URL value="@Quiz.css" />
       </stylesheets>
