Update UI for Todo (#97)
* Implement AddTodoCommandParser for todo list

* Refractor AddressBookParser

* Modify command message for AddTodoCommandParser

* Fix checkstyle

* Create AddTodoCommandParserTest

* Fix checkstyle

* Implement SaveTodoCommand

* Implement test cases for SaveTodoCommand and SaveTodoCommandParser

* Fix checkstyle

* Fix checkstyle

* Update Ui for todolist

* Create TodoListCard.fxml and TodoListPanel.fxml

* Fix checkstyle

* Fix checkstyle

* Update eaterycard for todo mode

* Fix category label for eaterycard

* Edit EateryListCard.fxml

--- a/src/main/resources/view/EateryListCard.fxml
+++ b/src/main/resources/view/EateryListCard.fxml
@@ -8,6 +8,6 @@
     <Label fx:id="id"/>
     <Label fx:id="name" wrapText="true" styleClass="h2"/>
     <Label fx:id="address" wrapText="true"/>
-    <Label fx:id="category" wrapText="true"/>
+    <Label fx:id="category" wrapText="true" minHeight="0" prefHeight="0" />
     <FlowPane fx:id="tags"/>
 </VBox>
