--- a/src/main/resources/view/finance/FinanceWindow.fxml
+++ b/src/main/resources/view/finance/FinanceWindow.fxml
@@ -43,7 +43,7 @@
           </Menu>
         </MenuBar>
 
-        <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <StackPane fx:id="commandBoxPlaceholder" styleClass="finance-command-box" VBox.vgrow="NEVER">
           <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
