--- a/src/main/resources/view/FinancialTrackerSummaryWindow.fxml
+++ b/src/main/resources/view/FinancialTrackerSummaryWindow.fxml
@@ -14,7 +14,7 @@
 
 <fx:root title="Summary" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
-    <Image url="@/images/help_icon.png" />
+    <Image url="@/images/finance.png" />
   </icons>
   <scene>
     <Scene>
