--- a/src/main/resources/view/LoanListPanel.fxml
+++ b/src/main/resources/view/LoanListPanel.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
-<?import javax.swing.text.html.ListView?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <HBox minHeight="20" styleClass="list-title">
         <Region HBox.hgrow="ALWAYS" />
-        <Label fx:id="loanContextView" alignment="CENTER" minHeight="20"  />
+        <Label fx:id="transactionContextView" alignment="CENTER" minHeight="20"  />
         <Region HBox.hgrow="ALWAYS" />
     </HBox>
     <ListView fx:id="loanListView" VBox.vgrow="ALWAYS" />
