--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -414,11 +414,12 @@
 #calendartags .label {
     -fx-text-fill: #362949;
     -fx-background-color: white;
+    -fx-opacity: 0.7;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
-    -fx-border-color: derive(#dadada, 10%);
-    -fx-border-width: 0.5;
+    -fx-border-color: white;
+    -fx-border-width: 1;
     -fx-font-size: 11;
 }
 
