--- a/src/main/resources/view/inventory/InventoryPage.fxml
+++ b/src/main/resources/view/inventory/InventoryPage.fxml
@@ -12,6 +12,7 @@
          <children>
             <TableView fx:id="tableView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="0.0">
               <columns>
+                  <TableColumn fx:id="indexColumn" prefWidth="75.0" text="Column X" />
                 <TableColumn fx:id="nameColumn" editable="false" prefWidth="75.0" sortable="false" styleClass="-fx-background-color:lightcoral-fx-background-color:lightcoral" text="NAME" />
                   <TableColumn fx:id="isDoneColumn" editable="false" prefWidth="75.0" sortable="false" styleClass="-fx-background-color:lightcoral-fx-background-color:lightcoral" text="ISDONE" />
               </columns>
