Contract amounts less than $0.01; refactor UI to extract common methods

--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -38,3 +38,7 @@
 .activity-owing.activity-owing.activity-owing {
     -fx-text-fill: maroon;
 }
+
+.activity-history-card .activity-neutral.activity-neutral.activity-neutral {
+    -fx-font-size: 13px;
+}
