--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -75,7 +75,7 @@
                         <padding>
                             <Insets bottom="10" left="10" right="10" top="10"/>
                         </padding>
-                        <Text fx:id="resultListTitle" fill="WHITE" text="placeholder" textAlignment="CENTER"
+                        <Text fx:id="resultListTitle" fill="WHITE" text="" textAlignment="CENTER"
                               wrappingWidth="305">
                             <font>
                                 <Font size="18.0"/>
