--- a/src/main/resources/view/Piechart.css
+++ b/src/main/resources/view/Piechart.css
@@ -10,8 +10,9 @@
 }
 
 .chart-title {
-  -fx-text-fill: #4682b4;
-  -fx-font-size: 1.8em;
+  -fx-text-fill: #ffffff;
+  -fx-font-size: 18px;
+  -fx-padding: -50px;
 }
 
 .chart-pie-label {
