--- a/docs/stylesheets/asciidoctor.css
+++ b/docs/stylesheets/asciidoctor.css
@@ -183,6 +183,7 @@ body.toc2.toc-right{padding-left:0;padding-right:20em}}
 .audioblock,.imageblock,.literalblock,.listingblock,.stemblock,.videoblock{margin-bottom:1.25em}
 .admonitionblock td.content>.title,.audioblock>.title,.exampleblock>.title,.listingblock>.title,.literalblock>.title,.stemblock>.title,.openblock>.title,.paragraph>.title,.quoteblock>.title,table.tableblock>.title,.verseblock>.title,.videoblock>.title,.dlist>.title,.olist>.title,.ulist>.title,.qlist>.title,.hdlist>.title{text-rendering:optimizeLegibility;text-align:left;font-family:"Noto Serif","DejaVu Serif",serif;font-size:1rem;font-style:italic}
 .imageblock>.title{text-rendering:optimizeLegibility;text-align:center;font-family:"Noto Serif","DejaVu Serif",serif;font-size:1rem;font-style:italic}
+.imageblock>.caption{align: center}
 table.tableblock>caption.title{white-space:nowrap;overflow:visible;max-width:0}
 .paragraph.lead>p,#preamble>.sectionbody>.paragraph:first-of-type p{color:rgba(0,0,0,.85)}
 table.tableblock #preamble>.sectionbody>.paragraph:first-of-type p{font-size:inherit}
