--- a/src/main/resources/view/FinancialTrackerPage.css
+++ b/src/main/resources/view/FinancialTrackerPage.css
@@ -21,7 +21,7 @@
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Segoe UI";
+    -fx-font-family: "Segoe UI Semibold";
 }
 
 /* Menu Bar Styling */
